@@ -1,0 +1,96 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Coolcam Siren Alarm NAS-AB01Z
+    http://products.z-wavealliance.org/products/1962
+    -->
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value type="list" genre="config" instance="1" index="1" label="Alarm Music Volume" value="3" min="1" max="3" size="1">
+            <Help>
+                This parameter defines the output volume when siren plays door bell music.
+                Door Bell music volume is divided into 3 stages
+            </Help>
+            <Item label="Low" value="1"/>
+            <Item label="Middle" value="2"/>
+            <Item label="High" value="3"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="2" label="Alarm Music Duration Time" value="2" min="1" max="255" size="0">
+            <Help>
+                This Parameter defines the alarm music duration time when siren receive an alarm sensor notification report or an alarm command from controller.
+                The duration time is divided into 5 stages.
+            </Help>
+            <Item label="Off" value="0"/>
+            <Item label="30 second" value="1"/>
+            <Item label="1 minute" value="2"/>
+            <Item label="5 minute" value="3"/>
+            <Item label="Always on" value="255"/>
+        </Value>
+        <Value type="byte" genre="config" instance="1" index="3" label="Door Bell Music Duration Time" units="minute" value="255" min="0" max="255" size="1">
+            <Help>This parameter defines the door bell music duration time when siren receives a door/window sensor notification report or an alarm command (BASIC_SET = 0x02) from controller.
+                The door bell music will be played always if this parameter is set to 255.
+                The door bell music will not be  played if this parameter is set to 0.
+                Other values are the door bell music playing duration time.</Help>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="4" label="Door Bell Music Volume" value="1" min="1" max="3" size="1">
+            <Help>This parameter defines the output volume when siren plays alarm music.
+                Door Bell music volume is divided into 3 stages</Help>
+            <Item label="Low" value="1"/>
+            <Item label="Middle" value="2"/>
+            <Item label="High" value="3"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="5" label="Alarm Music Index" value="10" min="1" max="10" size="1">
+            <Help>This parameter defines the alarm music index for siren play different music when alarm occurs.
+                There are 10 different music for user selection</Help>
+            <Item label="1" value="1"/>
+            <Item label="2" value="2"/>
+            <Item label="3" value="3"/>
+            <Item label="4" value="4"/>
+            <Item label="5" value="5"/>
+            <Item label="6" value="6"/>
+            <Item label="7" value="7"/>
+            <Item label="8" value="8"/>
+            <Item label="9" value="9"/>
+            <Item label="10" value="10"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="6" label="Door Bell Music Index" value="9" min="1" max="10" size="1">
+            <Help>This parameter defines the door bell music index for siren play different music when alarm occurs.
+                There are 10 different music for user selection.</Help>
+            <Item label="1" value="1"/>
+            <Item label="2" value="2"/>
+            <Item label="3" value="3"/>
+            <Item label="4" value="4"/>
+            <Item label="5" value="5"/>
+            <Item label="6" value="6"/>
+            <Item label="7" value="7"/>
+            <Item label="8" value="8"/>
+            <Item label="9" value="9"/>
+            <Item label="10" value="10"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="7" label="Configure Default Siren On Mode" value="1" min="1" max="2" size="1">
+            <Help>This parameter defines the default music index, volume and the duration time for 3 siren on.
+                This parameter can be selected between ALARM MUSIC and DOOR BELL MUSIC.
+                The settings for ALARM MUSIC MODE defines by Param #1, #2 and #5.
+                The settings for DOOR BELL MUSIC MODE defines by Param #3, #4 and #6</Help>
+            <Item label="Alarm music" value="1"/>
+            <Item label="Door bell music" value="2"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="8" label="Configure Alarm Led Enable" value="1" min="0" max="1" size="0">
+            <Help>This parameter defines the default led enable status when siren is on for ALARM MUSIC MODE</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="9" label="Door Bell Led Enable" value="0" min="0" max="1" size="0">
+            <Help>This parameter defines the default led enable status when siren is on for DOOR BELL MUSIC MODE</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="3">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+            <Group index="2" max_associations="5" label="Send Binary Switch Report"/>
+            <Group index="3" max_associations="5" label="Send Notification Report"/>
+        </Associations>
+    </CommandClass>
+</Product>
